cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificUnaryExprsCheckIgnoreAnnos.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  -----------------------------------
  (1/1) Unary operator "not" is used.
  -----------------------------------
   * In constant "c":
     - const bool c = not true;
                      ^
